--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="title_sign_up">Sign Up for an account</string>
     <string name="label_email">Email Address</string>
     <string name="label_password">Password</string>
+
+    <string name="cd_show_password">Show password</string>
+    <string name="cd_hide_password">Hide password</string>
 </resources>
