--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 
     <string name="cd_show_password">Show password</string>
     <string name="cd_hide_password">Hide password</string>
+    <string name="cd_password_requirement_satisfied">%s, satisfied</string>
+    <string name="cd_password_requirement_needed">%s, needed</string>
 </resources>
