--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="title_sign_up">Sign Up for an account</string>
     <string name="label_email">Email Address</string>
     <string name="label_password">Password</string>
+    <string name="label_sign_in">Sign In</string>
+    <string name="label_sign_up">Sign Up</string>
+    <string name="action_need_account">Need an account?</string>
+    <string name="action_already_have_account">Already have an account?</string>
 
     <string name="cd_show_password">Show password</string>
     <string name="cd_hide_password">Hide password</string>
